--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Japanese_Regex_Test Japanese_Regex_Test.cc)
+add_executable(GetAllRegexMatches GetAllRegexMatches.cc)
