--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,5 +45,11 @@ add_executable(Disjoint src/Algorithms/Disjoint.cc)
 # Regex Programs
 add_executable(Japanese_Regex_Test src/Regex/Japanese_Regex_Test.cc)
 add_executable(GetAllRegexMatches src/Regex/GetAllRegexMatches.cc)
-add_executable(Databases main.cpp)
 
+
+# Database Programs
+add_executable(ConnectionTest src/Database/ConnectionTest.cc)
+
+
+# Multithreading Programs
+add_executable(ExampleThread src/Database/ExampleThread.cc)
