--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,3 +56,6 @@ target_link_libraries(ConnectionTest pq pqxx)
 
 # Multithreading Programs
 add_executable(ExampleThread src/Multithreading/ExampleThread.cc)
+add_executable(ArrayTest src/STL-Implementations/TestArray.cc)
+add_executable(CalendarTest src/Chrono/CalendarTest.cc
+        src/Chrono/CalendarTest.cc)
